Set minimum width to prevent overflow deform

--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 body {
+  min-width:1000px;        /* Suppose you want minimum width of 1000px */
+  width: auto !important;  /* Firefox will set width as auto */
+  width: 1100px;  
   margin: 0;
   padding: 0;
   display: flex;
   flex-direction: column;
   font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 
 /* Header */
 
@@ -73,7 +77,8 @@ body {
   background-color: #3882F6;
   font-weight: 200;
   margin: 10px 0;
-  padding: 6px 30px;  
+  padding: 6px 30px;
+  cursor: pointer;
 }
 
 .A img {
@@ -186,7 +191,7 @@ body {
 .Dbox {
   display: flex;
   flex: 0 0 0;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   background-color: #3882F6;
   border-radius: 8px;
@@ -197,12 +202,12 @@ body {
 .DLeftTopText {
   font-size: 20px;
   color: white;
-  margin: 0 0 5px 0;
+  margin: 0 20px 5px;
 }
 
 .DLeftBottomText {
   color:rgba(255, 255, 255, 0.644);
-  margin: 5px 0 0;
+  margin: 5px 20px 0;
 }
 
 .D button {
@@ -213,8 +218,9 @@ body {
   border-radius: 6px;
   color: white;
   background-color: #3882F6;
-  margin: 0 0 0 40px;
+  margin: 0 5px;
   padding: 6px 25px;
+  cursor: pointer;
 }
 
 /* footer */
